--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "src/Server.ts",
   "scripts": {
-    "prepare": "husky install",
+    "postinstall": "husky install",
     "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node src/Server.ts --serve-static",
     "build": "npm run lint && webpack && node scripts/after_build.js",
     "build.zip": "npm run build && node scripts/zip.js",
@@ -41,6 +41,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
