--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "main": "src/Server.ts",
   "scripts": {
-    "postinstall": "husky install",
     "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node src/Server.ts --serve-static",
     "build": "npm run lint && webpack && node scripts/after_build.js",
     "build.zip": "npm run build && node scripts/zip.js",
     "lint": "eslint src --max-warnings=0 --fix"
   },
+  "pre-commit": "lint",
   "author": "pauhull",
   "license": "GPLv3",
   "dependencies": {
@@ -40,8 +40,7 @@
     "@typescript-eslint/parser": "^5.34.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
+    "pre-commit": "^1.2.2",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
@@ -53,16 +52,5 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.6",
     "utf-8-validate": "^5.0.9"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --max-warnings=0 --fix",
-      "git add"
-    ]
   }
 }
