Auto-detect baud rate

--- a/example_config.json
+++ b/example_config.json
@@ -4,7 +4,7 @@
   },
   "serial": {
     "port": "auto",
-    "baud_rate": 250000
+    "baud_rate": "auto"
   },
   "printer": {
     "bed_mesh": true,
