--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "marlinraker",
-  "version": "v0.1.3-alpha",
+  "version": "v0.2.0-alpha",
   "main": "src/Server.ts",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node src/Server.ts --serve-static",
+    "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node --files src/Server.ts --serve-static",
     "build": "npm run lint && webpack && node scripts/after_build.js",
     "build.zip": "npm run build && node scripts/zip.js",
     "lint": "eslint src --max-warnings=0 --fix",
@@ -12,6 +12,7 @@
   "author": "pauhull",
   "license": "GPLv3",
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "chalk": "^4.1.2",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
@@ -41,6 +42,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "pre-commit": "^1.2.2",
+    "raw-loader": "^4.0.2",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
