--- a/config/printers/prusa_i3_mk3s.toml
+++ b/config/printers/prusa_i3_mk3s.toml
@@ -13,6 +13,9 @@ min_extrude_temp = 180
 min_temp = 0
 max_temp = 100
 
+[printer.gcode]
+send_m73 = false
+
 [macros.start_print]
 rename_existing = "start_base"
 gcode = """
