--- a/config/printers/prusa_mini.toml
+++ b/config/printers/prusa_mini.toml
@@ -13,6 +13,9 @@ min_extrude_temp = 180
 min_temp = 0
 max_temp = 100
 
+[printer.gcode]
+send_m73 = false
+
 [macros.start_print]
 rename_existing = "start_base"
 gcode = """
@@ -29,6 +32,7 @@ rename_existing = "pause_base"
 gcode = """
 ${
 printer.printJob?.isPrinting ? `
+    M108 ; cancel heating
     pause_base ; pause print
     M118 E1 Paused print ; display in console
     G91
@@ -62,6 +66,7 @@ rename_existing = "cancel_base"
 gcode = """
 ${
 printer.printJob?.isPrinting ? `
+    M108 ; cancel heating
     cancel_base ; cancel print
     M118 E1 Print aborted ; display in console
     G28 XY ; home x and y
