--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iarna/toml": "^2.2.5",
     "@stroncium/procfs": "^1.2.1",
     "chalk": "^4.1.2",
+    "diskusage": "^1.1.3",
     "express": "^4.18.1",
     "fs-extra": "^10.1.0",
     "logrotate-stream": "^0.2.8",
