--- a/.eslintrc
+++ b/.eslintrc
@@ -46,6 +46,10 @@
     ],
     "@typescript-eslint/prefer-for-of": "warn",
     "@typescript-eslint/member-delimiter-style": "warn",
+    "@typescript-eslint/no-floating-promises": ["error",
+      {
+        "ignoreVoid": true
+      }],
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/prefer-nullish-coalescing": "off",
     "@typescript-eslint/prefer-readonly": "warn",
