--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npm run lint && webpack && node scripts/after_build.js",
     "build.zip": "npm run build && node scripts/zip.js",
     "lint": "eslint src --max-warnings=0 --fix",
-    "test": "eslint src --max-warnings=0"
+    "test": "eslint src --max-warnings=0",
+    "docs.serve": "mkdocs serve"
   },
   "author": "pauhull",
   "license": "GPLv3",
