--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/Server.ts",
   "scripts": {
     "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node --files src/Server.ts --serve-static --extended-logs",
-    "build": "npm run lint && webpack && node scripts/after_build.js",
-    "build.zip": "npm run build && node scripts/zip.js",
+    "build": "npm run lint && node scripts/build.js",
+    "build.zip": "npm run lint && node scripts/build.js --zip",
     "lint": "eslint src --max-warnings=0 --fix",
     "test": "eslint src --max-warnings=0",
     "docs.serve": "mkdocs serve"
@@ -38,20 +38,18 @@
     "@types/source-map-support": "^0.5.6",
     "@types/stroncium__procfs": "^1.2.0",
     "@types/unzipper": "^0.10.5",
-    "@types/webpack-node-externals": "^2.5.3",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "cross-env": "^7.0.3",
+    "esbuild": "^0.15.12",
+    "esbuild-node-externals": "^1.5.0",
     "eslint": "^8.22.0",
+    "execa": "^6.1.0",
+    "listr2": "^5.0.5",
     "pre-commit": "^1.2.2",
-    "raw-loader": "^4.0.2",
-    "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-node-externals": "^3.0.0",
     "zip-local": "^0.3.5"
   },
   "optionalDependencies": {
