--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/Server.ts",
   "scripts": {
     "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node --files src/Server.ts --serve-static --extended-logs",
-    "build": "npm run lint && node scripts/build.js",
-    "build.zip": "npm run lint && node scripts/build.js --zip",
+    "build": "node scripts/build.js",
+    "build.zip": "node scripts/build.js --zip",
     "lint": "eslint src --max-warnings=0 --fix",
     "test": "eslint src --max-warnings=0",
     "docs.serve": "mkdocs serve"
