--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
     "@typescript-eslint/no-shadow": "warn",
     "@typescript-eslint/no-unnecessary-condition": "warn",
     "@typescript-eslint/no-unnecessary-qualifier": "warn",
+    "@typescript-eslint/no-unsafe-declaration-merging": "off",
     "@typescript-eslint/object-curly-spacing": [
       "warn",
       "always"
