--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,8 @@ nav:
   - installation.md
   - configuration.md
   - security.md
+  - Troubleshooting:
+    - troubleshooting/stuttering-and-blobs.md
   - Advanced:
     - advanced/macro-scripting.md
     - advanced/update-manager.md
