--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "src/Server.ts",
   "scripts": {
     "dev": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node --files src/Server.ts --serve-static --extended-logs",
+    "dev.api": "cross-env NODE_ENV=development MARLINRAKER_DIR=./marlinraker_files/ ts-node --files src/Server.ts --extended-logs",
     "build": "node scripts/build.js",
     "build.zip": "node scripts/build.js --zip",
     "lint": "eslint src --max-warnings=0 --fix",
@@ -16,6 +17,7 @@
     "@iarna/toml": "^2.2.5",
     "@stroncium/procfs": "^1.2.1",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "diskusage": "^1.1.3",
     "express": "^4.18.2",
     "fs-extra": "^10.1.0",
@@ -30,6 +32,7 @@
     "ws": "^8.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
     "@types/logrotate-stream": "^0.2.31",
