--- a/config/printers/generic.toml
+++ b/config/printers/generic.toml
@@ -8,6 +8,7 @@ print_volume = [220, 220, 240]
 min_temp = 0
 max_temp = 250
 min_extrude_temp = 180
+filament_diameter = 1.75
 
 [printer.heater_bed]
 min_temp = 0
